--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         color: red;
         display: none;
       }
+
+      .test {
+        background-color: red;
+      }
     </style>
   </head>
   <body>
